# operando-eis-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: end_to_end_synthetic.py  figure_style_demo.py
src/oeis_toolkit/: __init__.py  fade.py  figstyle.py  synthetic.py
src/oeis_toolkit/eis/: circuit.py  drt.py  segmentation.py
src/oeis_toolkit/io/: biologic.py
src/oeis_toolkit/reliability/: censored.py
src/oeis_toolkit/spc/: charts.py
tests/: conftest.py  test_circuit_drt.py  test_io_segmentation.py  test_reliability_spc_fade.py
