[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "operando-eis-toolkit"
version = "0.1.0"
description = "Analysis primitives for operando EIS and censored reliability of battery cells"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["eis", "impedance", "battery", "reliability", "weibull", "drt", "spc"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
crosscheck = ["lifelines>=0.27", "reliability>=0.8"]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
